Pete comments and IT